--- a/test_train.ipynb
+++ b/test_train.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "reasonable-brazil",
+   "execution_count": 1,
+   "id": "continent-bandwidth",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'imresize' from 'scipy.misc' (C:\\Users\\quangmx\\Anaconda3\\envs\\torchenv\\lib\\site-packages\\scipy\\misc\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-7305772b0ace>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcustom_transforms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;31m# import models\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtensor2array\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msave_checkpoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Vingroup Courses\\projects\\cc\\custom_transforms.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmisc\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mimresize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimrotate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m '''Set of tranform random routines that takes list of inputs as arguments,\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'imresize' from 'scipy.misc' (C:\\Users\\quangmx\\Anaconda3\\envs\\torchenv\\lib\\site-packages\\scipy\\misc\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import time\n",
@@ -20,7 +33,7 @@
     "import torch.optim\n",
     "import torch.nn as nn\n",
     "import torch.utils.data\n",
-    "# import custom_transforms\n",
+    "import custom_transforms\n",
     "# import models\n",
     "from utils import tensor2array, save_checkpoint\n",
     "from inverse_warp import inverse_warp, pose2flow, flow2oob, flow_warp\n",
@@ -39,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "anticipated-helena",
+   "id": "sacred-suspension",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grand-monitoring",
+   "id": "pacific-mention",
    "metadata": {},
    "outputs": [],
    "source": [
